--- a/sass/_productos.scss
+++ b/sass/_productos.scss
@@ -36,7 +36,7 @@ a :hover{
     font-weight: 500;
     font-size: 0.9em;
     margin-top: 4em;
-    margin-left: 7em;
+    padding-left: 7em;
 }
 .textoP{
     margin-left: 1.7em;
@@ -78,5 +78,15 @@ a :hover{
     }
     .linea{
         width: 20em;
+    }
+}
+@media screen and (max-width: 992px) {
+    .texto{
+        padding-left: 4em;
+    }
+}
+@media screen and (max-width: 768px) {
+    .texto{
+        padding-left: 2em;
     }
 }
