--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,13 +12,15 @@
     box-sizing: border-box;
 }
 .general{
-    padding-left: 5em;
+    padding-left: 0em;
 }
 .titulo_catalogo {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 1.8em;
     padding-top: 1.3em;
+    padding-left: 0;
+    /* padding-top: 2em; */
     margin-bottom: 2.3rem;
 }
 .subtitulo_catalogo{
@@ -37,7 +39,7 @@
 .borde{
     border-right: 2px rgba(156, 156, 156, 0.63) solid;
     height: 25em;
-    margin-right: 1em;
+    /* margin-right: 1em; */
 }
 .borde a{
     color: black;
@@ -47,16 +49,21 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 1.3em;
-    padding-top: 2em;
-    margin-left: 5em;
+    padding-top: 2.05em;
+    /* margin-left: 5em; */
 }
 .contenido{
-    justify-content: center;
-    gap: 4em;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    padding-left: 7em;
 }
 .carta{
-    width: 21em;
+    width: 21.8em;
     margin-top: 2.3em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 .carta-text{
     font-family: 'Roboto', sans-serif;
@@ -68,12 +75,52 @@
 }
 
 
+
 @media  screen and (max-width: 425px){
     .general{
-        padding-left: 1em;
+        padding-left: 0em;
     }
     .cartaSeccion{
         margin-left: 0;
         margin-right: 1em;
     }
+    
 }
+@media  screen and (min-width: 1200px){
+    .botonesSeleccion {
+        width: 19.9%;
+        /* margin-right: 1em; */
+    } 
+    .miCol10{
+        width: 80.1% !important;
+    } 
+    
+}
+@media screen and (max-width: 768px) {
+    .categorias {
+        font-size: 1.1em;
+        line-height: 1.6em;
+    }
+    .titulo_catalogo {
+        padding-top: 0.5em;
+        margin-bottom: 2rem;
+        
+    }
+    .contenido {
+        justify-content: center;
+        padding-left: 0;
+}
+.catalogo{
+
+    padding-top: 1em;
+    /* margin-left: 5em; */
+    display: flex;
+    flex-direction: row;
+    
+}
+}
+/* @media  screen and (min-width: 992px) and (max-width: 1350px){
+    .cartaSeccion{
+        margin-left: 2em;
+    } 
+} */
