cambio en titulo catalogo

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -50,6 +50,7 @@
     font-weight: 700;
     font-size: 1.3em;
     padding-top: 2.05em;
+    padding-left: 0.5em;
     /* margin-left: 5em; */
 }
 .contenido{
