--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -111,14 +111,18 @@
         justify-content: center;
         padding-left: 0;
 }
-.catalogo{
-
-    padding-top: 1em;
-    /* margin-left: 5em; */
-    display: flex;
-    flex-direction: row;
-    
+    .catalogo{
+        padding-top: 1em;
+        /* margin-left: 5em; */
+        display: flex;
+        flex-direction: row;
 }
+    .carta{
+        width: 100%;
+        margin-top: 2.3em;
+        padding-left: 0.7em;
+        padding-right: 0.7em;
+    }
 }
 /* @media  screen and (min-width: 992px) and (max-width: 1350px){
     .cartaSeccion{
