--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -123,6 +123,9 @@
         padding-left: 0.7em;
         padding-right: 0.7em;
     }
+    .card {
+        border: 0;
+    }
 }
 /* @media  screen and (min-width: 992px) and (max-width: 1350px){
     .cartaSeccion{
