--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -124,7 +124,10 @@
         padding-right: 0.7em;
     }
     .card {
-        border: 0;
+        border: 0px !important;
+    }
+    .borde{
+    width: 95%;
     }
 }
 /* @media  screen and (min-width: 992px) and (max-width: 1350px){
