--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,7 +1,8 @@
 .footer{
     height: 20em;
-    margin-left: 5em;
+    padding-left: 5em;
     margin-top: 5em;
+    width: 99vw;
 }
 .logo{
     width: 12em;
@@ -29,13 +30,13 @@
     width: 3em;
 }
 .borde_pie{
-    box-shadow: rgba(153, 153, 153, 0.473) 0 0 8px 0px;
+    box-shadow: 0px 0px 8px 0px rgba(153, 153, 153, 0.473) ;
 }
 
 @media  screen and (max-width: 425px){
     .footer{
         height: 45em;
-        margin-left: 1em;
+        padding-left: 1em;
         margin-top: 2em;
     }
     .contactos{
