--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,7 @@
 }
 .general{
     padding-left: 0em;
+    width: 100vw !important;
 }
 .titulo_catalogo {
     font-family: 'Roboto', sans-serif;
@@ -51,14 +52,15 @@
     font-size: 1.3em;
     padding-top: 2.05em;
     padding-left: 0.5em;
-    /* margin-left: 5em; */
+    text-align: start;
+    width: 75%;
 }
 .contenido{
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: start;
-    padding-left: 7em;
+    padding-left: 6.5em;
 }
 .carta{
     width: 21.8em;
@@ -77,7 +79,7 @@
 
 
 
-@media  screen and (max-width: 425px){
+/* @media  screen and (max-width: 425px){
     .general{
         padding-left: 0em;
     }
@@ -86,18 +88,24 @@
         margin-right: 1em;
     }
     
-}
+} */
 @media  screen and (min-width: 1200px){
     .botonesSeleccion {
-        width: 19.9%;
+        width: 20%;
         /* margin-right: 1em; */
     } 
     .miCol10{
-        width: 80.1% !important;
+        width: 80% !important;
     } 
     
 }
 @media screen and (max-width: 768px) {
+    /* .miCol10{
+        width: 95% !important;
+    }  */
+    /* .general {
+        width: 100%;
+    } */
     .categorias {
         font-size: 1.1em;
         line-height: 1.6em;
@@ -110,6 +118,10 @@
     .contenido {
         justify-content: center;
         padding-left: 0;
+        padding-left: auto;
+        padding-right: auto;
+        /* width: 95%; */
+        /* margin-left: 5%;  */
 }
     .catalogo{
         padding-top: 1em;
@@ -120,9 +132,13 @@
     .carta{
         width: 100%;
         margin-top: 2.3em;
-        padding-left: 0.7em;
-        padding-right: 0.7em;
+        padding-left: 1em;
+        padding-right: 1em;
     }
+    /* .catalogo .carta a img {
+        max-width: 21em !important;
+        min-width: 18em !important;
+    } */
     .card {
         border: 0px !important;
     }
