--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -30,7 +30,8 @@
     width: 3em;
 }
 .borde_pie{
-    box-shadow: 0px 0px 8px 0px rgba(153, 153, 153, 0.473) ;
+    width: 100vw;
+    box-shadow: 0px 0px 7px 0px rgba(153, 153, 153, 0.473) ;
 }
 
 @media  screen and (max-width: 425px){
