--- a/sass/_productos.scss
+++ b/sass/_productos.scss
@@ -3,7 +3,8 @@
     text-decoration: none;
 }
 a :hover{
-    color: #FFF1C3;
+    /* color: #FFF1C3; */
+    color: rgb(95, 61, 87);
 }
 .subtitulo_productos{
     font-family: 'Roboto', sans-serif;
@@ -13,53 +14,64 @@ a :hover{
     margin-left: 3.8em;
 }
 .producto{
-    width: 43em;
+    /* max-width: 40em; */
+    /* max-width: 100%; */
     margin-top: 3em;
-    margin-left: 4em;
+    padding-left: 5.8em;
+    /* padding-rigth: 1em; */
+    box-sizing: border-box;
 }
 .titulo_producto{
     font-family: 'Roboto', sans-serif;
-    font-weight: 900;
+    font-weight: 800;
     font-size: 2.5em;
     margin-bottom: 1em;
-    margin-left: 0.5em;
+    /* margin-left: 0.5em; */
 }
 .titulo_productoDos{
     font-family: 'Roboto', sans-serif;
-    font-weight: 900;
+    font-weight: 800;
     font-size: 2.5em;
     margin-bottom: 1em;
+    width: 80%;
 }
 .texto{
-    width: 40em;
+    /* width: 40em; */
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 0.9em;
     margin-top: 4em;
     padding-left: 7em;
 }
-.textoP{
-    margin-left: 1.7em;
-
+.textoR{
+    width: 35em;
+}
+.textoP {
+    width: 90%;
 }
 .lineas{
    margin-bottom: 0;
+   padding-left: 0em;
+   /* margin-right: 0.5em; */
+   width: 80%;
 }
 .cartaProducto{
-    margin-left: 2em;
-    margin-right: 2em;
+    /* margin-left: 2em;
+    margin-right: 2em; */
+    display: flex;flex-direction: row;
+    justify-content: center;
 }
 
 
-@media  screen and (max-width: 425px){
-    .subtitulo_productos{
+/* @media  screen and (max-width: 425px){
+     .subtitulo_productos{
         margin-left: 1em;
-    }
-    .producto{
+    } 
+     .producto{
         width: 21em;
         margin-top: 3em;
         margin-left: 2em;
-    }
+    } 
     .titulo_producto{
         margin-left: 0;
     }
@@ -79,7 +91,7 @@ a :hover{
     .linea{
         width: 20em;
     }
-}
+} */
 @media screen and (max-width: 992px) {
     .texto{
         padding-left: 4em;
@@ -89,4 +101,16 @@ a :hover{
     .texto{
         padding-left: 2em;
     }
+    .producto{
+        margin-top: 3em;
+        padding-left: 2em;
+        padding-right: 2em;
+        box-sizing: border-box;
+    }
+    .titulo_producto{
+        font-size: 1.5em;
+    }
+    /* .linea{
+        width: 20em;
+    } */
 }
