--- a/sass/_productos.scss
+++ b/sass/_productos.scss
@@ -1,17 +1,28 @@
 .volver{
     color: black;
     text-decoration: none;
+
 }
 a :hover{
     /* color: #FFF1C3; */
     color: rgb(95, 61, 87);
+}
+.textoVolver{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-size: 1.3em;
+    padding-top: 2em;
+    padding-left: 3.8em;
+    width: 100%;
 }
 .subtitulo_productos{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     font-size: 1.3em;
     padding-top: 2em;
+    padding-left: 3.8em;
     width: 100%;
+    text-align: center;
 }
 .producto{
     /* max-width: 40em; */
@@ -44,7 +55,8 @@ a :hover{
     padding-left: 7em;
 }
 .textoR{
-    width: 35em;
+    /* width: 35em; */
+    width: 90%;
 }
 .textoP {
     width: 90%;
@@ -136,6 +148,9 @@ a :hover{
         font-size: 1.3em;
         padding-top: 2em;
         text-align: center;
+    }
+    .col-6 .car .carta {
+        width: auto;
     }
     /* .linea{
         width: 20em;
