--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -40,7 +40,6 @@
 .borde{
     border-right: 2px rgba(156, 156, 156, 0.63) solid;
     height: 25em;
-    /* margin-right: 1em; */
 }
 .borde a{
     color: black;
@@ -78,17 +77,6 @@
 }
 
 
-
-/* @media  screen and (max-width: 425px){
-    .general{
-        padding-left: 0em;
-    }
-    .cartaSeccion{
-        margin-left: 0;
-        margin-right: 1em;
-    }
-    
-} */
 @media  screen and (min-width: 1200px){
     .botonesSeleccion {
         width: 20%;
@@ -100,12 +88,6 @@
     
 }
 @media screen and (max-width: 768px) {
-    /* .miCol10{
-        width: 95% !important;
-    }  */
-    /* .general {
-        width: 100%;
-    } */
     .categorias {
         font-size: 1.1em;
         line-height: 1.6em;
@@ -125,20 +107,15 @@
 }
     .catalogo{
         padding-top: 1em;
-        /* margin-left: 5em; */
         display: flex;
         flex-direction: row;
 }
     .carta{
-        width: 100%;
+        /* width: 100%; */
         margin-top: 2.3em;
         padding-left: 1em;
         padding-right: 1em;
     }
-    /* .catalogo .carta a img {
-        max-width: 21em !important;
-        min-width: 18em !important;
-    } */
     .card {
         border: 0px !important;
     }
